fixed some issues with frame numbering, still can't figure out why total frame number is -1 of the real total free number, will work on it after slides are finished

--- a/Section1.tex
+++ b/Section1.tex
@@ -9,20 +9,27 @@
             \item Item 3 pause.
         \end{enumerate}
     \end{frame}
+    \begin{frame}
+
+    \end{frame}
     \subsection{Subsection 1.1}
+
     \begin{frame}{Simple frame}
         This is a simple frame.
     \end{frame}
     
-    \begin{frame}[plain]{Plain frame}
+    % \begin{frame}[plain]{Plain frame}
+    \begin{frame}{Plain frame}
         This is a frame with plain style and it is numbered.
     \end{frame}
     \subsection{Subsection 1.2}
-    \begin{frame}[t]
+    % \begin{frame}[t]
+    \begin{frame}
         This frame has an empty title and is aligned to top.
     \end{frame}
     
-    \begin{frame}[noframenumbering]{No frame numbering}
+    % \begin{frame}[noframenumbering]{No frame numbering}
+    \begin{frame}{No frame numbering}
         This frame is not numbered and is citing reference \cite{knuth74}.
     \end{frame}
     
@@ -36,4 +43,14 @@
             e^{i\pi} + 1 & = 0, \\
             \int_{-\infty}^\infty e^{-x^2}\,\mathrm{d}x & = \sqrt{\pi}.
         \end{align*}
+    \end{frame}
+    \section{new section}
+    \begin{frame}
+
+    \end{frame}
+    \begin{frame}
+
+    \end{frame}
+    \begin{frame}
+
     \end{frame}
