--- a/beamerinnerthemefocus.sty
+++ b/beamerinnerthemefocus.sty
@@ -115,6 +115,8 @@
     \begin{frame}[plain, noframenumbering]{}
         \sectionpage
     \end{frame}%
+    \addtocounter{framenumber}{1}
+    \addtocounter{realframenumber}{1}
 }
 
 % Subsection page.
@@ -145,6 +147,8 @@
     \begin{frame}[plain, noframenumbering]{}
         \subsectionpage
     \end{frame}%
+    \addtocounter{framenumber}{1}
+    \addtocounter{realframenumber}{1}
 }
 
 \mode<all>
