--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -4,9 +4,10 @@
 % Full instructions available at:
 % https://github.com/pcafrica/focus-beamertheme
 
-\documentclass[numbering=progressbar]{beamer}
+\documentclass{beamer}
 \usepackage[yyyymmdd]{datetime}
 \usetheme{focus}
+
 
 \definecolor{main}{RGB}{55, 135, 177}
 \definecolor{text}{RGB}{60, 60, 80}
@@ -26,6 +27,8 @@
 \logo{\ifplacelogo\includegraphics[height=1cm]{images/tu-logo-hckd2.png}\fi}
 \institute{University of Tehran}
 \date{\today}
+
+
 
 % Footline info is printed only if [numbering=fullbar].
 %\footlineinfo{Custom footline text}
