--- a/Section1.tex
+++ b/Section1.tex
@@ -44,13 +44,13 @@
             \int_{-\infty}^\infty e^{-x^2}\,\mathrm{d}x & = \sqrt{\pi}.
         \end{align*}
     \end{frame}
-    \section{new section}
-    \begin{frame}
+    % \section{new section}
+    % \begin{frame}
 
-    \end{frame}
-    \begin{frame}
+    % \end{frame}
+    % \begin{frame}
 
-    \end{frame}
-    \begin{frame}
+    % \end{frame}
+    % \begin{frame}
 
-    \end{frame}
+    % \end{frame}
