--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -4,8 +4,11 @@
 % Full instructions available at:
 % https://github.com/pcafrica/focus-beamertheme
 
+
 \documentclass{beamer}
 \usepackage[yyyymmdd]{datetime}
+\usepackage{tikz}
+\usetikzlibrary{quantikz2}
 \usetheme{focus}
 
 
