--- a/End.tex
+++ b/End.tex
@@ -1,5 +1,5 @@
 \begin{frame}[focus]
-    Thanks for using \textbf{Focus}!
+    Thanks for Your attention!
 \end{frame}
 
 \appendix
@@ -9,8 +9,8 @@
     \bibliographystyle{plain}
 \end{frame}
 
-\begin{frame}{Backup frame}
-    This is a backup frame, useful to include additional material for questions from the audience.
-    \vfill
-    The package \texttt{appendixnumberbeamer} is used not to number appendix frames.
-\end{frame}
+% \begin{frame}{Backup frame}
+%     This is a backup frame, useful to include additional material for questions from the audience.
+%     \vfill
+%     The package \texttt{appendixnumberbeamer} is used not to number appendix frames.
+% \end{frame}
