--- a/focus-demo.tex
+++ b/focus-demo.tex
@@ -9,6 +9,10 @@
 \usepackage[yyyymmdd]{datetime}
 \usepackage{tikz}
 \usetikzlibrary{quantikz2}
+\usepackage{amsmath}
+\usepackage{xfrac}
+\usepackage{mathdots}
+\usepackage{nccmath}
 \usetheme{focus}
 
 
