--- a/Section2.tex
+++ b/Section2.tex
@@ -1,76 +1,76 @@
-\section{Section 2}
-    \begin{frame}{Blocks}
-        \begin{block}{Block}
-            Text.
-        \end{block}
-        \pause
-        \begin{alertblock}{Alert block}
-            Alert \alert{text}.
-        \end{alertblock}
-        \pause
-        \begin{exampleblock}{Example block}
-            Example \textcolor{example}{text}.
-        \end{exampleblock}
-    \end{frame}
+% \section{Section 2}
+%     \begin{frame}{Blocks}
+%         \begin{block}{Block}
+%             Text.
+%         \end{block}
+%         \pause
+%         \begin{alertblock}{Alert block}
+%             Alert \alert{text}.
+%         \end{alertblock}
+%         \pause
+%         \begin{exampleblock}{Example block}
+%             Example \textcolor{example}{text}.
+%         \end{exampleblock}
+%     \end{frame}
     
-    \begin{frame}{Lists}
-        \begin{columns}[t, onlytextwidth]
-            \column{0.33\textwidth}
-                Items:
-                \begin{itemize}
-                    \item Item 1
-                    \begin{itemize}
-                        \item Subitem 1.1
-                        \item Subitem 1.2
-                    \end{itemize}
-                    \item Item 2
-                    \item Item 3
-                \end{itemize}
+%     \begin{frame}{Lists}
+%         \begin{columns}[t, onlytextwidth]
+%             \column{0.33\textwidth}
+%                 Items:
+%                 \begin{itemize}
+%                     \item Item 1
+%                     \begin{itemize}
+%                         \item Subitem 1.1
+%                         \item Subitem 1.2
+%                     \end{itemize}
+%                     \item Item 2
+%                     \item Item 3
+%                 \end{itemize}
             
-            \column{0.33\textwidth}
-                Enumerations:
-                \begin{enumerate}
-                    \item First
-                    \item Second
-                    \begin{enumerate}
-                        \item Sub-first
-                        \item Sub-second
-                    \end{enumerate}
-                    \item Third
-                \end{enumerate}
+%             \column{0.33\textwidth}
+%                 Enumerations:
+%                 \begin{enumerate}
+%                     \item First
+%                     \item Second
+%                     \begin{enumerate}
+%                         \item Sub-first
+%                         \item Sub-second
+%                     \end{enumerate}
+%                     \item Third
+%                 \end{enumerate}
             
-            \column{0.33\textwidth}
-                Descriptions:
-                \begin{description}
-                    \item[First] Yes.
-                    \item[Second] No.
-                \end{description}
-        \end{columns}
-    \end{frame}
-\setbeamertemplate{caption}[numbered]
-    \begin{frame}{Figures and Tables}
-        \begin{columns}
-            \column{0.4\textwidth}
-                \begin{figure}
-                    \centering
-                    \includegraphics{focus-logo.pdf}
-                    \caption{Figure caption.}
-                    \label{fig:focuslogo}
-                \end{figure}
+%             \column{0.33\textwidth}
+%                 Descriptions:
+%                 \begin{description}
+%                     \item[First] Yes.
+%                     \item[Second] No.
+%                 \end{description}
+%         \end{columns}
+%     \end{frame}
+% \setbeamertemplate{caption}[numbered]
+%     \begin{frame}{Figures and Tables}
+%         \begin{columns}
+%             \column{0.4\textwidth}
+%                 \begin{figure}
+%                     \centering
+%                     \includegraphics{focus-logo.pdf}
+%                     \caption{Figure caption.}
+%                     \label{fig:focuslogo}
+%                 \end{figure}
                 
-            \column{0.6\textwidth}
-                \begin{table}
-                    \centering
-                    \begin{tabular}{rcc}
-                         & Heading 1 & Heading 2 \\\hline
-                        Row 1 & \(v_{11}\) & \(v_{12}\) \\
-                        Row 2 & \(v_{21}\) & \(v_{22}\) \\
-                        Row 3 & \(v_{31}\) & \(v_{32}\) \\
-                    \end{tabular}
-                    \caption{Table caption.}
-                    \label{tab:demo}
-                \end{table}
-        \end{columns}
-    \end{frame}
+%             \column{0.6\textwidth}
+%                 \begin{table}
+%                     \centering
+%                     \begin{tabular}{rcc}
+%                          & Heading 1 & Heading 2 \\\hline
+%                         Row 1 & \(v_{11}\) & \(v_{12}\) \\
+%                         Row 2 & \(v_{21}\) & \(v_{22}\) \\
+%                         Row 3 & \(v_{31}\) & \(v_{32}\) \\
+%                     \end{tabular}
+%                     \caption{Table caption.}
+%                     \label{tab:demo}
+%                 \end{table}
+%         \end{columns}
+%     \end{frame}
     
    
